[tool.poetry]
name = "qloader"
version = "6.0.3"
description = "Gather results from some search engine"
authors = ["tasker <tasker@ialcloud.xyz>"]

[tool.poetry.dependencies]
python = "^3.7"
selenium = "^3.141.0"
requests = "^2.23.0"
pillow = "^8.1.1"
imagehash = "^4.1.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
ipython = "^7.12.0"
pytest = "^6.2.4"
pytest-cov = "^2.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
