[tool.poetry]
name = "qloader"
version = "8.1.8"
description = "Gather results from some search engine"
authors = ["tasker <tasker@ialcloud.xyz>"]

[tool.poetry.dependencies]
python = "^3.7,<4.0"
selenium = "*"
requests = "*"
pillow = "*"
imagehash = "*"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
ipython = "^7.12.0"
pytest = "^6.2.4"
pytest-cov = "^2.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
