[tool.poetry]
name = "qloader"
version = "8.3.0"
description = "Gather results from some search engine"
authors = ["tasker <tasker@ialcloud.xyz>"]

[tool.poetry.dependencies]
python = "^3.7,<4.0"
selenium = "*"
requests = "*"
pillow = "*"
imagehash = "*"

[tool.poetry.dev-dependencies]
black = "*"
ipython = "*"
pytest = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
